# -*- coding: utf-8 -*-
[metadata]
name = 32blit
version = 0.0.6
author = Philip Howard
author_email = phil@pimoroni.com
description = 32Blit asset preparation and upload tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 32Blit CLI
url = https://32blit.com
project_urls =
	GitHub=https://www.github.com/pimoroni/32blit-tools
	Twitter=https://twitter.com/32blit
license = MIT
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
platforms = any
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Topic :: System :: Hardware

[options]
include_package_data = True
python_requires = >= 3.4
packages = find:
install_requires =
	pillow
	pyyaml
	bitstring
	pyserial
	tqdm
	freetype-py

[options.packages.find]
excluse =
	tests
	test.*

[options.entry_points]
console_scripts =
	32blit = ttblit:main

[flake8]
exclude =
	.tox,
	.eggs,
	.git,
	__pycache__,
	build,
	dist
ignore =
	E501
